--- a/config/database.yml
+++ b/config/database.yml
@@ -11,7 +11,17 @@ default: &default
 
 development:
   <<: *default
-  database: db/development.sqlite3
+
+#  ローカル環境（Sqlite用）
+#  database: db/development.sqlite3
+
+#  ローカル環境（MySQL用）
+  adapter: mysql2
+  database: sample
+  socket: /tmp/mysql.sock
+  host: localhost
+  username: dev
+  password: dev
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
