--- a/config/database.yml
+++ b/config/database.yml
@@ -21,7 +21,7 @@ development:
   socket: /tmp/mysql.sock
   host: localhost
   username: dev
-  password: dev
+  password: Dev@2017
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
